[package]
name = "proxy_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json","socks"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
scraper = "0.16.0"
sled = "0.34.7"
chrono = "0.4.24"
csv = "1.2.1"
regex = "1.8.1"
bincode = "1.3.3"
serde_json = "1.0.96"
anyhow = "1.0.71"
colored = "2.0.0"
structopt = "0.3.26"
futures = "0.3.28"